--- a/package.json
+++ b/package.json
@@ -12,4 +12,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1"
   }
+  "dependencies": {
+  "next": "14.2.7",
+  "react": "18.3.1",
+  "react-dom": "18.3.1",
+  "@supabase/supabase-js": "^2.49.1"
 }
